# cndp

.github/workflows/: smoke.yml
containerization/k8s/: README.md  crio-README.md
containerization/k8s/cndp-pods/: cndp-0-0.yaml
containerization/k8s/networks/: cndp-cni-nad.yaml
doc/guides/sample_app_ug/: k8s_dp_integration.rst
test/installed_headers/: .gitignore  meson.build  run_test
tools/: jsonc_gen.sh
